--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,14 @@ footer {
     font-family: 'Chicle', cursive;
     font-size: 1.75rem;
 }
-#about .card-body {
+#about .card-body, #contact .card-body {
     color: white;
 }
 
-#video p, #video h6 {
+#video p, #video h4 {
     color: white;
 }
+
 .playlist>li:hover {
     cursor: pointer
 }
