--- a/css/main.css
+++ b/css/main.css
@@ -82,3 +82,24 @@ footer {
         max-width: 40vh;
     }
 }
+
+.song-list {
+    display: inline-block;
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+}
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #fff;
+    margin: 1em 0;
+    padding: 0; 
+}
+
+.img-anchor {
+    display: inline-block;
+    margin-top: 3.5px;
+}
